--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rescript-use-sync-external-store",
   "version": "0.1.0",
   "description": "ReScript bindings to use-sync-external-store",
+  "repository": "github:illusionalsagacity/rescript-use-sync-external-store",
   "author": "rob",
   "license": "MIT",
   "keywords": [
