--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,5 @@
-yarnPath: .yarn/releases/yarn-3.2.3.cjs
 nodeLinker: node-modules
+
+yarnPath: .yarn/releases/yarn-3.4.1.cjs
+
+enableMessageNames: false
