feat: update ReScript to v10.1.2

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,5 +1,6 @@
 {
   "name": "rescript-use-sync-external-store",
+  "jsx": { "version": 4, "mode": "automatic" },
   "reason": { "react-jsx": 3 },
   "sources": [
     {
