--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "use-sync-external-store": "^1.0.0"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.4.6",
-    "@changesets/cli": "^2.24.4",
-    "@rescript/react": "^0.10.3",
-    "rescript": "^10.0.0",
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.0",
+    "@rescript/react": "~0.11.0",
+    "rescript": "^10.1.2",
     "use-sync-external-store": "^1.0.0"
   },
   "sideEffects": false
