chore: update yarn

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,9 @@
-nodeLinker: node-modules
+compressionLevel: mixed
 
-yarnPath: .yarn/releases/yarn-3.4.1.cjs
+enableGlobalCache: true
 
 enableMessageNames: false
+
+nodeLinker: node-modules
+
+yarnPath: .yarn/releases/yarn-4.2.2.cjs
