--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,5 +1,6 @@
 {
   "name": "rescript-use-sync-external-store",
+  "uncurried": false,
   "jsx": { "version": 4, "mode": "automatic" },
   "reason": { "react-jsx": 3 },
   "sources": [
@@ -11,10 +12,10 @@
   ],
   "package-specs": [
     {
-      "module": "es6",
+      "module": "esmodule",
       "in-source": true
     }
   ],
-  "suffix": ".bs.js",
+  "suffix": ".res.mjs",
   "bs-dependencies": ["@rescript/react"]
 }
