--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   "packageManager": "yarn@4.2.2",
   "peerDependencies": {
     "@rescript/react": "*",
-    "rescript": ">=9.0.0 || >=10.0.0",
+    "rescript": ">=9.0.0 || >=10.0.0 || >=11.0.0",
     "use-sync-external-store": "^1.0.0"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
-    "@rescript/react": "~0.11.0",
-    "rescript": "^10.1.2",
+    "@rescript/react": "~0.12.0",
+    "rescript": "^11.1.1",
     "use-sync-external-store": "^1.0.0"
   },
   "sideEffects": false
